--- a/main/apps/belt/templates/belt/add_book.html
+++ b/main/apps/belt/templates/belt/add_book.html
@@ -14,7 +14,7 @@
         <input type='text' name='title'>
         <label>Author:</label>
         <input type='text' name='author'>
-        <select class='select'>
+        <select name='select'>
                 <option>none</option>
             {% for book in books %}
                 <opiton>{{ book.title }}</opiton>
